--- a/views/parts/labs/navbar.html
+++ b/views/parts/labs/navbar.html
@@ -4,6 +4,13 @@
       <small class="bi-code-slash"></small>
       <small>nocode</small>
     </div>
+    <div class="ncode-toggle">
+      <div class="ncode-toggle-button">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+    </div>
     <div class="ncode-nav-items">
       <div class="nav-item active">
         <a href="" class="nav-link">
