--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -92,6 +92,14 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.4);
 }
 
+.ncode-navbar.collapsed .ncode-nav-items {
+  display: none;
+}
+
+.ncode-toggle {
+  display: none;
+}
+
 
 
 /*
@@ -104,10 +112,11 @@ header {
   position: relative;
 }
 
-header .bold  {
+header .bold {
   font-family: 'Roboto-Bold';
   font-size: 34px !important;
 }
+
 /*
 header::after {
   content: '';
@@ -262,7 +271,7 @@ cARDS
 
 .text-header {
   color: #fdfdfd;
-  font-family: 'Cousine';
+  font-family: 'Cousine-Bold';
   margin-bottom: 2rem;
   font-size: 20px;
 }
@@ -304,8 +313,6 @@ cARDS
   object-fit: cover;
   object-position: center;
 }
-
-
 
 
 .card-slider {
@@ -506,52 +513,53 @@ FAQS
 
 .card-faqs-container {
   width: 100%;
-  position: relative;
   display: flex;
   flex-direction: column;
 }
 
 .faqs-item {
   width: 100%;
-  position: relative;
   padding: 0 1rem;
   background-color: #101021;
   border: 1px solid rgba(255, 255, 255, 0.1);
   color: #fdfdfd;
-}
-
-.faqs-item+.faqs-item {
   margin-top: 1rem;
 }
 
 .faqs-header {
   width: 100%;
-  height: 60px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: relative;
   cursor: pointer;
-  font-family: 'Cousine';
+  font-size: 18px;
+  font-family: 'Cousine-Regular';
 }
 
 .faqs-contain {
-  min-height: 0;
-  transition: height 0.1s ease-in-out, min-height 0.1 0.1s ease-in-out;
+  height: 0;
+  overflow: hidden;
+  transition: 0.2s ease-in-out;
+  font-family: 'Roboto-Light';
+  padding: 0;
 }
 
-.faqs-contain span {
-  display: none;
-  font-family: 'Roboto-Light';
+
+.faqs-item.active [class^="bi-"] {
+  transition: 0.2s ease;
+  transform: rotate(0deg);
+}
+
+.faqs-item.active [class^="bi-"] {
+  transform: rotate(180deg);
 }
 
 .faqs-item.active .faqs-contain {
-  min-height: 80px;
+  height: auto;
+  padding-bottom: 2rem;
 }
 
-.faqs-item.active .faqs-contain span {
-  display: block;
-}
 
 
 
@@ -567,7 +575,7 @@ PRICING
 
 .card-pricing-header .title {
   font-size: 30px;
-  font-family: 'Cousine';
+  font-family: 'Cousine-Bold';
 }
 
 .card-pricing-header .ncode-btn-action.active {
@@ -656,5 +664,67 @@ PRICING
   display: flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
+}
+
+
+/*
+IFRAME
+*/
+
+.card-section:has(.ncode-trailer)::after {
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.05;
+  background: linear-gradient(to left, #06f, #09f, #000, red);
+}
+
+.ncode-trailer {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.ncode-trailer .bold {
+  line-height: 24px;
+  text-align: center;
+  font-family: 'Cousine-Regular';
+  margin-bottom: 2rem;
+}
+
+.ncode-video-play {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  z-index: 11111;
+  color: #fdfdfd;
+}
+
+.ncode-video-play small[class^="bi-"] {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
+  border-radius: 10px;
+  aspect-ratio: 1/1;
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+}
+
+iframe {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
   position: absolute;
 }
