--- a/views/main.html
+++ b/views/main.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/css/app.css?v=<?= time() ?>">
+  <link rel="stylesheet" href="/assets/css/media.css?v=<?= time() ?>">
   <link rel="stylesheet" href="/assets/css/bootstrap-icons.css">
   <link rel="stylesheet" href="/assets/css/all.css">
 
