--- a/views/app/site/index.html
+++ b/views/app/site/index.html
@@ -68,6 +68,7 @@
 </div>
 
 <div class="card-section">
+  <div class="wall"></div>
   <div class="card-section-contain">
     <div class="ncode-container">
       <div class="ncode-trailer">
