--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -88,8 +88,9 @@ img {
   justify-content: center;
   border-radius: 2px;
   padding: 0.4rem 1rem;
-  color: rgba(255, 255, 255, 0.4);
-  border: 1px solid rgba(255, 255, 255, 0.4);
+  color: #fdfdfd;
+  border: 1px solid transparent;
+  background-color: #07f;
 }
 
 .ncode-navbar.collapsed .ncode-nav-items {
@@ -672,24 +673,42 @@ PRICING
 IFRAME
 */
 
-.card-section:has(.ncode-trailer)::after {
+.card-section:has(.ncode-trailer) {
+  height: 80vh;
+}
+
+
+.wall {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: url('../images/ncode-2.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  opacity: 0.02;
+}
+.wall::after {
   content: '';
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   position: absolute;
-  opacity: 0.05;
+  opacity: 0.1;
   background: linear-gradient(to left, #06f, #09f, #000, red);
 }
 
 .ncode-trailer {
   width: 100%;
-  height: 80vh;
+  height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
 }
 
 .ncode-trailer .bold {
