--- a/views/parts/labs/navbar.html
+++ b/views/parts/labs/navbar.html
@@ -18,7 +18,7 @@
         </a>
       </div>
       <div class="nav-item">
-        <a href="" class="nav-link">
+        <a href="/templates" class="nav-link">
           <small>Explorar</small>
         </a>
       </div>
