--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -29,6 +29,16 @@ img {
   max-width: 100%;
 }
 
+.main {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+}
+
 .ncode-container {
   width: 80%;
   margin: 0 auto;
@@ -118,6 +128,10 @@ header .bold {
   font-size: 34px !important;
 }
 
+.mh {
+  height: 60vh;
+}
+
 /*
 header::after {
   content: '';
@@ -139,6 +153,50 @@ header::after {
   background: url('../images/back.png');
   background-size: cover;
   opacity: 0.2;
+}
+
+header form {
+  margin: 2rem 0;
+}
+
+header form .bi-search {
+  top: 50%;
+  right: 5%;
+  position: absolute;
+  color: rgba(255, 255, 255, 0.6);
+  transform: translateY(-50%);
+}
+
+.ncode-filter {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.ncode-filter-item {
+  width: 120px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  color: rgba(255, 255, 255, 0.4);
+  font-family: 'Roboto-Light';
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.ncode-filter-item.active {
+  color: #06f;
+  border-color: #06f;
+}
+
+.ncode-filter-item:not(.active):hover {
+  color: #fdfdfd;
+  border-color: transparent;
+  background-color: #06f;
 }
 
 
@@ -690,6 +748,7 @@ IFRAME
   background-attachment: fixed;
   opacity: 0.02;
 }
+
 .wall::after {
   content: '';
   top: 0;
@@ -746,4 +805,82 @@ iframe {
   height: 100%;
   object-fit: contain;
   position: absolute;
+}
+
+
+
+
+/*
+TEMPLATE
+*/
+
+.card-templates-row {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  margin: 4rem 0 0;
+}
+
+.card-templates-row:last-child {
+  margin-bottom: 10rem;
+}
+
+.card-template-item {
+  width: 240px;
+  height: 225px;
+  transition: 0.2s ease-in-out;
+}
+
+.card-template-item:hover {
+  transform: translateY(-5px);
+}
+
+.card-template-item .cover {
+  width: 100%;
+  height: 160px;
+  border-radius: 4px;
+  position: relative;
+}
+
+.card-template-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 4px;
+}
+
+.card-template-item .cover::after {
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.2;
+  background: linear-gradient(to top, #07f, #000);
+}
+
+.card-template-item .cover .actions {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+}
+
+.template-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+  font-family: 'Cousine-Regular';
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.template-info .name {
+  display: block;
+  color: #fdfdfd;
+}
+
+.template-info .name+small {
+  font-size: 12px;
 }
