--- a/views/main.html
+++ b/views/main.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/assets/css/app.css?v=<?= time() ?>">
   <link rel="stylesheet" href="/assets/css/media.css?v=<?= time() ?>">
   <link rel="stylesheet" href="/assets/css/bootstrap-icons.css">
-  <link rel="stylesheet" href="/assets/css/all.css">
+  <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 
   <title>
     <?= 'title' ?>
