--- a/views/app/webb/index.html
+++ b/views/app/webb/index.html
@@ -53,7 +53,13 @@
 				<a href="" class="tools_header_item" title="blocks"><span class="bi bi-grid-1x2-fill"></span></a>
 			</div>
 
-			<div class="builder_tools_contain"></div>
+			<div class="builder_tools_contain">
+				<div class="web_builder_pages">Pages</div>
+				<div class="web_builder_layers">Layers</div>
+				<div class="web_builder_style active">Styles</div>
+				<div class="web_builder_property">Property</div>
+				<div class="web_builder_blocks">Blocks</div>
+			</div>
 		</div>
 	</div>
 
