--- a/public/assets/webb/web_builder.css
+++ b/public/assets/webb/web_builder.css
@@ -140,6 +140,30 @@ body {
 
 .openclose > * { pointer-events: none; } 
 
+.builder_tools_contain {
+	width: 100%;
+	height: 80%;
+	position: relative;
+	overflow-y: auto;
+}
+
+.builder_tools_contain [class^="web_builder_"] {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	opacity: 0;
+	pointer-events: none;
+	background-color: #f8f8f8;
+	transition: 0.1s ease-in;
+}
+
+.builder_tools_contain [class^="web_builder_"].active {
+	opacity: 1;
+	pointer-events: all;
+}
+
 .builder_tools_header {
 	top: 0;
 	left: 0;
@@ -148,6 +172,8 @@ body {
 	position: sticky;
 	display: flex;
 	align-items: center;
+	z-index: 11111;
+	background-color: #f8f8f8;
 	justify-content: space-between;
 }
 
