--- a/public/assets/webb/web_builder.css
+++ b/public/assets/webb/web_builder.css
@@ -89,7 +89,7 @@ body {
 
 .separator {
 	margin-top: 75px;
-	margin-top: 20px;
+	margin-top: 25px;
 	position: relative;
 }
 
@@ -142,9 +142,11 @@ body {
 
 .builder_tools_contain {
 	width: 100%;
-	height: 80%;
+	height: 75%;
 	position: relative;
 	overflow-y: auto;
+	overflow-x: hidden;
+	margin-top: 0.4rem;
 }
 
 .builder_tools_contain [class^="web_builder_"] {
@@ -228,7 +230,65 @@ body {
 	width: 100%;
 }
 
+.webb_page_add,
+.webb_page_item {
+	width: 100%;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	border-top: solid 1px rgba(0, 0, 0, 0.1);
+	border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+	margin: 0 auto;
+	padding-left: 1rem;
+	border-radius: 8px;
+}
 
+.webb_page_add {
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 1rem;
+	color: #000;
+	padding: 0;
+	background-color: #fff;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+}
+
+.webb_page_add:hover {
+	opacity: 0.7;
+}
+
+.webb_page_item+.webb_page_item {
+	margin-top: 0.5rem;
+}
+
+.webb_page_item .actions {
+	display: flex;
+	align-items: center;
+	gap: 1px;
+}
+
+.webb_page_item a {
+	width: 30px;
+	height: 30px;
+	aspect-ratio: 1/1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #000;
+	border: solid 1px rgba(0, 0, 0, 0.2);
+	background-color: #f9f9f9;
+	border-radius: 2px;
+}
+
+.webb_page_item a:hover {
+	opacity: 0.7;
+}
 
 
 ::-webkit-scrollbar {
@@ -241,4 +301,13 @@ body {
 
 ::-webkit-scrollbar-thumb {
 	background-color: #aaa;
+}
+
+.gjs-cv-canvas {
+	width: 80%;
+	height: 100%;
+	top: 10px;
+	z-index: 11;
+	position: relative;
+	background: transparent;
 }
