--- a/views/app/webb/index.html
+++ b/views/app/webb/index.html
@@ -6,14 +6,21 @@
 	<title>web_builder</title>
 	<link rel="stylesheet" href="/assets/css/general-sans.css">
 	<link rel="stylesheet" href="/assets/css/bootstrap-icons.css">
+
+	<link rel="stylesheet" href="/assets/lib/wp/grapes.min.css">
+	<script src="/assets/lib/wp/grapes.min.js"></script>
+	<script src="/assets/lib/wp/grapesjs-blocks-basic.js"></script>
+	
 	<link rel="stylesheet" href="/assets/webb/web_builder.css?v=<?=time()?>">
+
+
 </head>
 <body>
 
 	<div class="web_builder_top">
 		<div class="container">
 			<div class="top_title">
-				<span class="bold">Snocode</span>
+				<span class="bold"> <small class="bi-code-slash"></small> S-nocode</span>
 				<small class="tw-muted">Constructor de websites</small>
 			</div>
 		</div>
@@ -37,7 +44,7 @@
 	<div class="separator"></div>
 
 	<div class="web_builder">
-		<h1>Testing</h1>
+		Basic devices
 	</div>
 
 	<div class="openclose">
@@ -46,17 +53,35 @@
 	<div class="web_builder_tools">
 		<div class="builder_tools">
 			<div class="builder_tools_header">
-				<a href="" class="tools_header_item" title="pages"><span class="bi bi-wallet2"></span></a>
-				<a href="" class="tools_header_item active" title="layers"><span class="bi bi-layers-fill"></span></a>
+				<a href="" class="tools_header_item active" title="pages"><span class="bi bi-wallet2"></span></a>
+				<a href="" class="tools_header_item" title="layers"><span class="bi bi-layers-fill"></span></a>
 				<a href="" class="tools_header_item" title="style"><span class="bi bi-palette-fill"></span></a>
 				<a href="" class="tools_header_item" title="property"><span class="bi bi-ui-radios-grid"></span></a>
 				<a href="" class="tools_header_item" title="blocks"><span class="bi bi-grid-1x2-fill"></span></a>
 			</div>
 
 			<div class="builder_tools_contain">
-				<div class="web_builder_pages">Pages</div>
+				<div class="web_builder_pages active">
+					<a href="" class="webb_page_add"> <small> + Adicionar página </small></a>
+					<div class="webb_added_pages">
+						<button class="webb_page_item">
+							<span class="name">Home</span>
+							<div class="actions">
+								<a href="" title="editar"><span class="bi bi-pencil-square"></span></a>
+								<a href="" title="remover"><span class="bi bi-trash"></span></a>
+							</div>
+						</button>
+						<button class="webb_page_item">
+							<span class="name">About</span>
+							<div class="actions">
+								<a href="" title="editar"><span class="bi bi-pencil-square"></span></a>
+								<a href="" title="remover"><span class="bi bi-trash"></span></a>
+							</div>
+						</button>
+					</div>
+				</div>
 				<div class="web_builder_layers">Layers</div>
-				<div class="web_builder_style active">Styles</div>
+				<div class="web_builder_style">Styles</div>
 				<div class="web_builder_property">Property</div>
 				<div class="web_builder_blocks">Blocks</div>
 			</div>
@@ -67,3 +92,41 @@
 	
 </body>
 </html>
+
+<script>
+	// Open close toolbars
+	const openclose = document.querySelector('.openclose');
+	const web_builder = document.querySelector('.gjs-cv-canvas');
+	const web_builder_tools = document.querySelector('.web_builder_tools');
+	openclose.addEventListener('click', (e) => {
+		//e.preventDefault();
+		if (web_builder.classList.length == 1) {
+			web_builder.classList.add('active');
+			web_builder_tools.classList.add('active');
+			web_builder.style.width = '100%';
+			e.target.style.right='0%';
+			web_builder_tools.style.width = '0%';
+		} else {
+			
+			web_builder.classList.remove('active');
+			web_builder_tools.classList.remove('active');
+			web_builder.style.width = '80%';
+			web_builder_tools.style.width = '20%';
+			e.target.style.right='18.5%';
+		}
+	});
+
+	// Tabs change
+	const tabs_items = document.querySelectorAll('.tools_header_item');
+	const webb_contents = document.querySelectorAll('.builder_tools_contain > div');
+
+	tabs_items.forEach((item, key) => {
+		item.addEventListener('click', (e) => {
+			e.preventDefault();
+			tabs_items.forEach((item) => item.classList.remove('active'));
+			webb_contents.forEach((item) => item.classList.remove('active'));
+			item.classList.add('active');
+			webb_contents[key].classList.add('active');
+		});
+	});
+</script>
