--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -817,6 +817,7 @@ TEMPLATE
 .card-templates-row {
   display: flex;
   align-items: start;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 4rem 0 0;
 }
@@ -828,6 +829,7 @@ TEMPLATE
 .card-template-item {
   width: 240px;
   height: 225px;
+  margin-top: 2rem;
   transition: 0.2s ease-in-out;
 }
 
@@ -890,3 +892,15 @@ TEMPLATE
 
 
 
+.sk-wrapper-not-found {
+  width: 100%;
+  height: 100vh;
+  background-color: #f1f1f1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sk-not-found-text {
+  color: rgba(0, 0, 0, 0.7);
+}
