--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -20,6 +20,23 @@ body {
   overflow-x: hidden;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
+}
+
+.wrapper footer,
+.wrapper .footer {
+  margin-top: auto;
+}
+
+.white-bg {
+  background-color: #f4f4f4 !important;
+}
+
 a {
   color: #333;
   text-decoration: none;
@@ -903,4 +920,153 @@ TEMPLATE
 
 .sk-not-found-text {
   color: rgba(0, 0, 0, 0.7);
+}
+
+
+.contain-has-filter .ncode-container {
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: start;
+  gap: 10px;
+}
+
+.has-filter {
+  width: 20%;
+}
+
+.contain-templates {
+  width: 80%;
+}
+
+.contain-templates img {
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.toolbar {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+.toolbar [class^="bi"] {
+  background-color: #fff;
+  padding: 0.75rem;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+}
+
+.toolbar-items {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  overflow-y: auto;
+  padding-top: 1rem;
+}
+
+.toolbar-items::-webkit-scrollbar {
+  width: 8px;
+}
+
+.toolbar-items+.bi-chevron-right {
+  margin-left: auto;
+}
+
+.toolbar-item {
+  color: #456;
+  font-size: 14px;
+  border-radius: 4px;
+  padding: 0.8rem 1rem;
+  background-color: #fdfdfd;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.template-item {
+  width: 100%;
+  height: 210px;
+  margin-top: 1rem;
+  display: flex;
+  align-items: start;
+  position: relative;
+  background-color: #fdfdfd;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.02);
+}
+
+.template-item:hover {
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+}
+
+.template-item .cover {
+  width: 40%;
+  height: 100%;
+}
+
+.template-item .cover img {
+  width: 100%;
+  height: 100%;
+}
+
+.template-item .info {
+  margin-left: 1rem;
+  padding: 1rem 0;
+}
+
+.template-item .info .title {
+  font-size: 20px;
+}
+
+.template-item .info p {
+  margin: 1rem 0;
+  font-size: 13px;
+  font-style: italic;
+}
+
+.absolute-status,
+.template-item .type {
+  color: #fdfdfd;
+  padding: 0.2rem 0.3rem;
+  background-color: #151521; 
+}
+
+.template-item .price {
+  display: flex;
+  align-items: baseline;
+  margin-top: 1rem;
+  gap: 10px;
+  font-size: 18px;
+}
+
+.absolute-status {
+  top: 10%;
+  right: 0;
+  position: absolute;
+}
+
+/*
+Filters
+*/
+
+.has-filter .title {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  margin-top: 1.8rem;
+  background-color: #151520;
+  color: #fff;
+  padding-left: 1rem;
+}
+
+.fitler-item {
+  margin-top: 1rem;
 }
