--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -34,7 +34,7 @@ body {
 }
 
 .white-bg {
-  background-color: #f4f4f4 !important;
+  background-color: #fdfdfd !important;
 }
 
 a {
@@ -936,7 +936,7 @@ TEMPLATE
 }
 
 .contain-templates {
-  width: 80%;
+  width: 100%;
 }
 
 .contain-templates img {
@@ -946,127 +946,263 @@ TEMPLATE
   object-position: center;
 }
 
+
+
+/*
+toolbar
+*/
+
 .toolbar {
   width: 100%;
-  height: 100px;
+  height: 35px;
   display: flex;
   align-items: center;
   gap: 10px;
+  /*overflow-y: auto;*/
   justify-content: center;
+  /*box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);*/
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
 
-.toolbar [class^="bi"] {
-  background-color: #fff;
-  padding: 0.75rem;
-  cursor: pointer;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-}
-
 .toolbar-items {
+  gap: 10px;
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
-  gap: 10px;
-  overflow-y: auto;
-  padding-top: 1rem;
+  
+  justify-content: center; 
+  background-color: #F9FAFD; 
 }
 
-.toolbar-items::-webkit-scrollbar {
-  width: 8px;
-}
-
-.toolbar-items+.bi-chevron-right {
-  margin-left: auto;
+.toolbar::-webkit-scrollbar,
+.toolbar-items::-webkit-scrollbar-track,
+.toolbar-items::-webkit-scrollbar-thumb {
+  width: 0px !important;
 }
 
 .toolbar-item {
-  color: #456;
+  color: #000;
   font-size: 14px;
-  border-radius: 4px;
-  padding: 0.8rem 1rem;
-  background-color: #fdfdfd;
-  border: solid 1px rgba(0, 0, 0, 0.1);
+  min-width: 100px;
+  width: 100px;
+  height: 90%;
+  min-height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: solid 1px transparent;
   cursor: pointer;
   white-space: nowrap;
 }
 
-.template-item {
-  width: 100%;
-  height: 210px;
-  margin-top: 1rem;
-  display: flex;
-  align-items: start;
-  position: relative;
-  background-color: #fdfdfd;
-  border: solid 1px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.02);
+.toolbar-item:hover {
+  color: #fff;
+  background-color: #cc0000;
+}
+/*
+nav
+*/
+
+.ncode-navbar.white-bg {
+  background-color: #fdfdfd !important;
 }
 
-.template-item:hover {
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+.ncode-navbar.white-bg * {
+  color: #000;
 }
 
-.template-item .cover {
-  width: 40%;
-  height: 100%;
+.auto {
+  justify-content: end;
 }
 
-.template-item .cover img {
-  width: 100%;
-  height: 100%;
+.nav-link small {
+  font-size: 14px;
 }
 
-.template-item .info {
-  margin-left: 1rem;
+.initial {
+  background-color: initial !important;
+}
+
+.__card-section-header {
   padding: 1rem 0;
 }
 
-.template-item .info .title {
-  font-size: 20px;
+.__card-section-header * {
+  color: #000;
 }
 
-.template-item .info p {
-  margin: 1rem 0;
-  font-size: 13px;
-  font-style: italic;
-}
-
-.absolute-status,
-.template-item .type {
-  color: #fdfdfd;
-  padding: 0.2rem 0.3rem;
-  background-color: #151521; 
-}
-
-.template-item .price {
-  display: flex;
-  align-items: baseline;
-  margin-top: 1rem;
-  gap: 10px;
-  font-size: 18px;
-}
-
-.absolute-status {
-  top: 10%;
-  right: 0;
-  position: absolute;
-}
-
-/*
-Filters
-*/
-
-.has-filter .title {
+.__card-section-header .ncode-container {
+  height: 100%;
   display: flex;
   align-items: center;
-  height: 40px;
-  margin-top: 1.8rem;
-  background-color: #151520;
-  color: #fff;
-  padding-left: 1rem;
 }
 
-.fitler-item {
-  margin-top: 1rem;
+.__card-section-header .filters {
+  margin-left: auto;
+}
+
+.tw-muted {
+  color: #8a8a8a;
+}
+
+.__card-section-header .tw-muted + .bold {
+  margin-top: -5px;
+  font-size: 2vw;
+  display: block;
+  font-family: 'Roboto-Bold';
+}
+
+.__card-section-header button,
+.__card-section-header select {
+  outline: none;
+  padding: 0.3rem 0.5rem;
+  margin: 0;
+  height: 30px;
+  cursor: pointer;
+  box-sizing: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  /*box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);*/
+}
+
+.__card-section-header button {
+  color: #cc0000;
+  margin-right: 10px; 
+  border-color: #cc0000;
+}
+
+.__card-section-header button * { color: #cc0000; }
+.__card-section-header button:hover { 
+  color: #fff;
+  background-color: #cc0000;
+}
+
+.__card-section-header button:hover * { color: #fff; }
+
+/*
+file template
+*/
+.linetemplate {
+  width: 100%;
+  display: flex;
+  align-items: start;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.linetemplate + .linetemplate {
+  margin-top: 2rem;
+}
+
+.file-template {
+  width: 320px;
+  min-width: 300px;
+  height: 260px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+.file-template .cover {
+  width: 100%;
+  height: 80%;
+  position: relative;
+  border-radius: 4px;
+}
+
+.file-template .cover img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px 4px 0 0;
+}
+
+.tempinfo,
+.tempname {
+  height: 10%;
+  display: flex;
+  align-items: center;
+  padding: 0 1rem;
+  justify-content: space-between;
+}
+
+.tempname {
+  margin-bottom: -5px;
+  font-family: 'Roboto-Bold';
+}
+
+
+.classificated {
+  color: #8a8a8a;
+  font-family: 'Roboto-Light';
+  padding: 0.1rem 0.2rem;
+  /*background-color: #0d0f11;*/
+  margin-left: auto;
+}
+
+.abs_prev {
+  left: 20%;
+  top: 20%;
+  z-index: 1111;
+  width: 80px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.2s ease;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.file-template:hover .abs_prev {
+  opacity: 1;
+  pointer-events: all;
+}
+
+
+/*
+page-manager
+*/
+
+.page-manager .ncode-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.page-manager .positions {
+  width: 320px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  border: solid 1px #cc0000;
+  border-radius: 4px;
+  justify-content: space-between;
+}
+
+.page-manager .pos {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+}
+
+.page-manager .pos + .pos {
+  border-left: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+.page-manager .pos:hover,
+.page-manager .pos.active {
+  color: #fff;
+  background-color: #cc0000;
+  border-color: transparent;
 }
