--- a/public/assets/css/my-css.css
+++ b/public/assets/css/my-css.css
@@ -13,12 +13,13 @@
 }
 
 ::-webkit-scrollbar-track {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #eee;
+  background-color: #E8EBEE;
   border-radius: 2px;
+  border: solid 1px rgba(0, 0, 0, 0.1);
 }
 
 * {
@@ -196,12 +197,15 @@ img {
   text-decoration: line-through;
 }
 
+.flex-start {
+  align-items: start !important;
+}
+
 /*
 |---------------------------------------------------
 | Navigation
 |---------------------------------------------------
 */
-
 .__nav {
   width: 100%;
   height: 80px;
@@ -210,15 +214,29 @@ img {
   z-index: 111111111111;
 }
 
+.__nav-appname {
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  aspect-ratio: 1/1;
+  color: #fff;
+  border-radius: 4px;
+  background-color: #cc0000;
+}
+
 .__nav-appname .bi {
   align-items: center;
   font-size: 18px;
 }
 
+.__nav .__nav-item,
 .__nav .__nav-items,
 .__nav .sx-container {
   height: 100%;
   align-items: center;
+  position: relative;
 }
 
 .__nav-items {
@@ -230,7 +248,39 @@ img {
 .__nav-items a {
   color: #000;
   font-size: 1.1vw;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.__nav-item.active a {
+  color: #cc0000;
+  font-family: 'Open Sans Bold';
+  transition: 0.2s ease;
+}
+
+.__nav-item:after {
+  content: '';
+  bottom: 0;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  width: 0;
+  height: 4px;
+  background-color: #cc0000;
+  transition: 0.2s ease;
+}
+
+.__nav-item:hover::after,
+.__nav-item.active::after {
+  width: 100%;
+}
+
+.__nav-item:hover a {
+  color: #cc0000;
+}
+
 
 /*
 |---------------------------------------------------
@@ -247,6 +297,11 @@ img {
   background-size: cover;
   background-position: center;
   transform: rotateX(360deg);
+}
+
+.no-top {
+  top: 0 !important;
+  overflow: hidden;
 }
 
 .wallpaper::after {
@@ -266,6 +321,21 @@ img {
   align-items: center;
   z-index: 111;
   position: relative;
+}
+
+.container-auth {
+  top: 0;
+  left: 10%;
+  width: 80%;
+  height: 100%;
+  position: absolute !important;
+  transition: 0.2s ease;
+  overflow-y: auto;
+  /*z-index: 111111;*/
+}
+
+.container-auth:last-of-type {
+  top: 100%;
 }
 
 .wallpaper .sx-col {
@@ -341,7 +411,7 @@ img {
 */
 
 .sx .box {
-  justify-content: space-between;
+  /*justify-content: space-between;*/
 }
 
 .sx .box a {
@@ -353,6 +423,7 @@ img {
   height: 100px;
   padding: 10px;
   border-radius: 5px;
+  margin-top: 1rem;
   background-color: #fff;
   border: solid 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
@@ -370,6 +441,14 @@ img {
   align-items: center;
   justify-content: center;
   /*box-shadow: none !important;*/
+}
+
+.sx .box-item+.box-item {
+  margin-left: 1rem;
+}
+
+.sx .box-item:nth-child(6) {
+  margin-left: 0;
 }
 
 /*
@@ -426,7 +505,7 @@ img {
   /*border-radius: 4px;*/
   font-size: 1.1vw;
   gap: 10px;
-  border-left: 3px solid #000;
+  border-left: 3px solid #cc0000;
 }
 
 .asked-body {
@@ -444,7 +523,7 @@ img {
 .asked-item.active {
   border: solid 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-  border-left: 3px solid #000;
+  border-left: 3px solid #cc0000;
 }
 
 .asked-item.active .asked-body {
@@ -620,14 +699,14 @@ footer .by a {
 
 .package-item a {
   display: flex;
-  color: #000;
+  color: #cc0000;
   height: 45px;
   padding: 0 1rem;
   align-items: center;
   margin-top: 1rem;
   border-radius: 4px;
   font-family: 'Roboto-Regular';
-  border: solid 1px #000;
+  border: solid 1px #cc0000;
   transition: 0.2s ease;
   justify-content: space-between;
   overflow: hidden;
@@ -640,15 +719,14 @@ footer .by a {
 }
 
 .package-item:last-of-type a {
-  background-color: #000;
+  background-color: #cc0000;
   color: #fff;
 }
 
 .package-item a:hover {
   color: #fff;
   opacity: 0.9;
-  border-color: #222;
-  background-color: #222;
+  background-color: #aa0000;
   transform: translateY(2px);
 }
 
@@ -762,23 +840,36 @@ footer .by a {
   justify-content: space-between;
 }
 
-.browse-row + .browse-row {
+.browse-row+.browse-row {
   margin-top: 2rem;
 }
 
 .browse-item {
-  width: 30%; 
-  height: 320px;
+  width: 30%;
+  height: 340px;
   border-radius: 4px;
-  border: solid 1px rgba(0, 0, 0, 0.1);
   background-color: #fff;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .browse-item .cover {
-  height: 80%;
+  width: 100%;
+  height: 70%;
   position: relative;
   border-radius: 4px;
+  overflow: hidden;
+}
+
+.browse-item .cover::after {
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+  background: #000;
+  position: absolute;
 }
 
 .browse-item .cover img {
@@ -786,5 +877,330 @@ footer .by a {
   height: 100%;
   object-fit: cover;
   object-position: center;
+  border-radius: 4px 4px 0 0;
+}
+
+.browse-item .cover a.abs {
+  right: -10rem;
+  bottom: 1rem;
+  position: absolute;
+  background-color: #fff;
+  padding: 0 1rem;
+  height: 40px;
+  line-height: 40px;
+  display: block;
+  text-align: center;
+  font-size: 15px;
+  border-radius: 2px;
+  color: #000;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  z-index: 111;
+  transition: 0.2s ease;
+}
+
+.browse-item:hover a.abs {
+  right: 0.5rem;
+}
+
+.browse-item a.abs:hover {
+  opacity: 0.8;
+}
+
+.browse-item .name {
+  padding: 0 1rem;
+  color: #000;
+  font-family: 'Roboto-Bold';
+}
+
+.browse-item .name:hover {
+  opacity: 0.8;
+}
+
+.browse-item .name+.d-flex {
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem;
+}
+
+.browse-item .rating {
+  width: 140px;
+  height: 40px;
+  display: block;
+  border: solid 1px rgba(0, 0, 0, 0.2);
+  margin-left: 1rem;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 2px;
+  margin-top: 0.4rem;
+  font-size: 15px;
+  color: #000;
+  background-color: #fff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.browse-item .rating:hover {
+  opacity: 0.8;
+}
+
+/*
+|---------------------------------------------------
+| loader
+|---------------------------------------------------
+*/
+.loader {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 11111111111111111;
+  background-color: #fff;
+  opacity: 0.99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.loader .spin {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  border: 6px solid;
+  border-color: #000 rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25);
+  animation: rotate 2s ease infinite;
+}
+
+.loader.end-animation {
+  display: none;
+}
+
+.loader.end-animation .spin {
+  animation: none;
+}
+
+@keyframes rotate {
+
+  0%,
+  100% {
+    transform: rotate(360deg);
+  }
+
+  20% {
+    transform: rotate(0deg);
+  }
+}
+
+
+
+/*
+AUTH
+*/
+
+.auth-group {
+  width: 70%;
+  height: 50px;
+  position: relative;
+  margin: 0 auto;
+}
+
+.auth-group select,
+.auth-group input,
+.auth-group button {
+  width: 100%;
+  height: 100%;
   border-radius: 4px;
+  color: #fff;
+  outline: none;
+  border: solid 1px rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  font-family: 'Roboto-Regular';
+  padding: 0 1rem;
+  font-size: 16px;
+  transition: 0.2s ease;
+}
+
+.__silica,
+.auth-group.__phone {
+  display: none;
+}
+
+.auth-group select option {
+  color: #000;
+}
+
+.auth-group input:focus {
+  border-color: #fff;
+}
+
+.auth-group button {
+  cursor: pointer;
+  color: #000;
+  background-color: #fff;
+  transition: 0.2s ease;
+}
+
+.auth-group button:hover {
+  opacity: 0.8;
+  transform: translateY(1px);
+}
+
+.auth-group .fas {
+  top: 50%;
+  right: 1rem;
+  position: absolute;
+  transform: translateY(-50%);
+  color: #fff;
+}
+
+.auth-group+.auth-group {
+  margin-top: 0.5rem;
+}
+
+.auth-group .tw-muted {
+  margin-bottom: 0;
+}
+
+.auth-group:has(.tw-muted) a {
+  color: #fff;
+}
+
+
+/*
+|---------------------------------------------------
+| loader
+|---------------------------------------------------
+*/
+.domain-input {
+  width: 100%;
+  height: 50px;
+  outline: none;
+  border-radius: 4px;
+  position: relative;
+  display: flex;
+}
+
+.domain-input .prefix {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  color: #fff;
+  align-items: center;
+  font-size: 15px;
+  background-color: #525f6b;
+  justify-content: center;
+  border-radius: 4px 0 0 4px;
+}
+
+.domain-input input {
+  outline: none;
+  width: 70%;
+  height: 100%;
+  font-family: 'Open Sans Regular';
+  font-size: 15px;
+  padding-left: 1rem;
+  border-radius: 0 4px 4px 0;
+  border: solid 1px rgba(0, 0, 0, 0.2);
+}
+
+.domain-input input:focus {
+  border-color: rgba(0, 0, 0, 0.4);
+}
+
+.domain-input .spinner,
+.domain-input .bi {
+  top: 50%;
+  right: 1rem;
+  position: absolute;
+  font-size: 22px;
+  color: green;
+  transform: translateY(-50%);
+}
+
+
+.domain-input .spinner {
+  top: 30%;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  border: solid 5px;
+  border-color: #000 rgba(0, 0, 0, 0.2) rgba(0, 0, 0, 0.2) rgba(0, 0, 0, 0.2);
+  animation: rotate 2s ease infinite;
+}
+
+.domain-input .bi.hide,
+.domain-input .spinner.hide {
+  display: none;
+}
+
+
+
+.in-use {
+  gap: 1.5rem;
+  align-items: start !important;
+}
+
+.template-in-use .cover {
+  width: 100%;
+  height: 280px;
+  margin: 0 auto;
+  border-radius: 4px;
+}
+
+.template-in-use .cover img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 4px;
+}
+
+.template-in-use .in-use-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 15px;
+}
+
+.template-in-use .in-use-item .value {
+  font-family: 'Open Sans Bold';
+}
+
+
+.template-in-use span,
+.template-in-use button,
+.template-in-use a {
+  display: block;
+  margin-top: 1rem;
+}
+
+.template-in-use button {
+  color: #fff;
+  width: 100% !important;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  background-color: #525f6b !important;
+}
+
+.template-in-use a {
+  color: #000;
+  height: 55px;
+  border-radius: 4px;
+  line-height: 50px;
+  text-align: center;
+  background-color: #fff;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  transition: 0.2s ease;
+}
+
+.template-in-use button:hover,
+.template-in-use a:hover {
+  opacity: 0.8;
+  transform: translateY(1px);
 }
