--- a/public/assets/css/grid-system.css
+++ b/public/assets/css/grid-system.css
@@ -1,20 +1,31 @@
-.table,
-.thead .tbody {
+table {
+    width: 1000px;
+}
+
+thead,
+tbody {
     width: 100%;
 }
 
+.table {
+}
+
+thead,
 .thead {
     width: 100%;
-    height: 50px;
+    height: 60px;
     align-items: center;
     line-height: 50px;
     background-color: #E8EBEE;
     background-color: #fff;
     margin-bottom: 0.5rem;
+    overflow-x: auto;
 }
 
+tbody,
 .tbody {
     background: #fff;
+    overflow-x: auto;
 }
 
 .thead,
@@ -23,29 +34,34 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
 
+tbody,
 .tbody {
-    height: 320px;
     overflow-y: auto;
 }
 
+tr,
 .tr {
     display: flex;
 }
 
+td,
 .td {
     font-size: 15px;
     text-align: center;
 }
 
+td a,
 .td a {
     color: #07f;
 }
 
+td a:hover,
 .td a:hover {
     color: #04f;
     text-decoration: underline;
 }
 
+thead tr,
 .thead .tr {
     height: 100%;
 }
@@ -54,11 +70,13 @@
     font-family: 'Roboto-Bold';
 }
 
+tbody tr,
 .tbody .tr {
     height: 50px;
     line-height: 50px;
 }
 
+tbody tr:nth-child(even),
 .tbody .tr:nth-child(even) {
     background-color: #f9f9f9;
 }
@@ -70,12 +88,12 @@
 */
 .col-1 {
     width: 8.333333333333333%;
-    flex: 0 0 8.333333333333333%;
+    min-width: 8.333333333333333%;
 }
 
 .col-2 {
     width: 16.66666666666667%;
-    flex: 0 0 16.66666666666667%;
+    min-width: 16.66666666666667%;
 }
 
 .col-3 {
