--- a/public/assets/css/style/navbar.css
+++ b/public/assets/css/style/navbar.css
@@ -1,6 +1,10 @@
 .navbar {
+	top: 0;
+	left: 0;
+	position: sticky;
     width: 100%;
     height: 60px;
+    z-index: 11111111111;
     background-color: #fff;
     -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
