--- a/public/assets/css/style/classes.css
+++ b/public/assets/css/style/classes.css
@@ -494,6 +494,66 @@ Padding
     padding-left: 3rem !important;
 }
 @media (min-width: 0px) {
+    .w-xxs-5 {
+        width: 5% !important;
+    }
+    .w-xxs-10 {
+        width: 10% !important;
+    }
+    .w-xxs-15 {
+        width: 15% !important;
+    }
+    .w-xxs-20 {
+        width: 20% !important;
+    }
+    .w-xxs-25 {
+        width: 25% !important;
+    }
+    .w-xxs-30 {
+        width: 30% !important;
+    }
+    .w-xxs-35 {
+        width: 35% !important;
+    }
+    .w-xxs-40 {
+        width: 40% !important;
+    }
+    .w-xxs-45 {
+        width: 45% !important;
+    }
+    .w-xxs-50 {
+        width: 50% !important;
+    }
+    .w-xxs-55 {
+        width: 55% !important;
+    }
+    .w-xxs-60 {
+        width: 60% !important;
+    }
+    .w-xxs-65 {
+        width: 65% !important;
+    }
+    .w-xxs-70 {
+        width: 70% !important;
+    }
+    .w-xxs-75 {
+        width: 75% !important;
+    }
+    .w-xxs-80 {
+        width: 80% !important;
+    }
+    .w-xxs-85 {
+        width: 85% !important;
+    }
+    .w-xxs-90 {
+        width: 90% !important;
+    }
+    .w-xxs-95 {
+        width: 95% !important;
+    }
+    .w-xxs-100 {
+        width: 100% !important;
+    }
     .mt-xxs-0, .my-xxs-0 {
         margin-top: 0 !important;
     }
@@ -709,6 +769,66 @@ Padding
     }
 }
 @media (min-width: 240px) {
+    .w-xs-5 {
+        width: 5% !important;
+    }
+    .w-xs-10 {
+        width: 10% !important;
+    }
+    .w-xs-15 {
+        width: 15% !important;
+    }
+    .w-xs-20 {
+        width: 20% !important;
+    }
+    .w-xs-25 {
+        width: 25% !important;
+    }
+    .w-xs-30 {
+        width: 30% !important;
+    }
+    .w-xs-35 {
+        width: 35% !important;
+    }
+    .w-xs-40 {
+        width: 40% !important;
+    }
+    .w-xs-45 {
+        width: 45% !important;
+    }
+    .w-xs-50 {
+        width: 50% !important;
+    }
+    .w-xs-55 {
+        width: 55% !important;
+    }
+    .w-xs-60 {
+        width: 60% !important;
+    }
+    .w-xs-65 {
+        width: 65% !important;
+    }
+    .w-xs-70 {
+        width: 70% !important;
+    }
+    .w-xs-75 {
+        width: 75% !important;
+    }
+    .w-xs-80 {
+        width: 80% !important;
+    }
+    .w-xs-85 {
+        width: 85% !important;
+    }
+    .w-xs-90 {
+        width: 90% !important;
+    }
+    .w-xs-95 {
+        width: 95% !important;
+    }
+    .w-xs-100 {
+        width: 100% !important;
+    }
     .mt-xs-0, .my-xs-0 {
         margin-top: 0 !important;
     }
@@ -924,6 +1044,66 @@ Padding
     }
 }
 @media (min-width: 576px) {
+    .w-sm-5 {
+        width: 5% !important;
+    }
+    .w-sm-10 {
+        width: 10% !important;
+    }
+    .w-sm-15 {
+        width: 15% !important;
+    }
+    .w-sm-20 {
+        width: 20% !important;
+    }
+    .w-sm-25 {
+        width: 25% !important;
+    }
+    .w-sm-30 {
+        width: 30% !important;
+    }
+    .w-sm-35 {
+        width: 35% !important;
+    }
+    .w-sm-40 {
+        width: 40% !important;
+    }
+    .w-sm-45 {
+        width: 45% !important;
+    }
+    .w-sm-50 {
+        width: 50% !important;
+    }
+    .w-sm-55 {
+        width: 55% !important;
+    }
+    .w-sm-60 {
+        width: 60% !important;
+    }
+    .w-sm-65 {
+        width: 65% !important;
+    }
+    .w-sm-70 {
+        width: 70% !important;
+    }
+    .w-sm-75 {
+        width: 75% !important;
+    }
+    .w-sm-80 {
+        width: 80% !important;
+    }
+    .w-sm-85 {
+        width: 85% !important;
+    }
+    .w-sm-90 {
+        width: 90% !important;
+    }
+    .w-sm-95 {
+        width: 95% !important;
+    }
+    .w-sm-100 {
+        width: 100% !important;
+    }
     .mt-sm-0, .my-sm-0 {
         margin-top: 0 !important;
     }
@@ -1139,6 +1319,66 @@ Padding
     }
 }
 @media (min-width: 768px) {
+    .w-md-5 {
+        width: 5% !important;
+    }
+    .w-md-10 {
+        width: 10% !important;
+    }
+    .w-md-15 {
+        width: 15% !important;
+    }
+    .w-md-20 {
+        width: 20% !important;
+    }
+    .w-md-25 {
+        width: 25% !important;
+    }
+    .w-md-30 {
+        width: 30% !important;
+    }
+    .w-md-35 {
+        width: 35% !important;
+    }
+    .w-md-40 {
+        width: 40% !important;
+    }
+    .w-md-45 {
+        width: 45% !important;
+    }
+    .w-md-50 {
+        width: 50% !important;
+    }
+    .w-md-55 {
+        width: 55% !important;
+    }
+    .w-md-60 {
+        width: 60% !important;
+    }
+    .w-md-65 {
+        width: 65% !important;
+    }
+    .w-md-70 {
+        width: 70% !important;
+    }
+    .w-md-75 {
+        width: 75% !important;
+    }
+    .w-md-80 {
+        width: 80% !important;
+    }
+    .w-md-85 {
+        width: 85% !important;
+    }
+    .w-md-90 {
+        width: 90% !important;
+    }
+    .w-md-95 {
+        width: 95% !important;
+    }
+    .w-md-100 {
+        width: 100% !important;
+    }
     .mt-md-0, .my-md-0 {
         margin-top: 0 !important;
     }
@@ -1354,6 +1594,66 @@ Padding
     }
 }
 @media (min-width: 992px) {
+    .w-lg-5 {
+        width: 5% !important;
+    }
+    .w-lg-10 {
+        width: 10% !important;
+    }
+    .w-lg-15 {
+        width: 15% !important;
+    }
+    .w-lg-20 {
+        width: 20% !important;
+    }
+    .w-lg-25 {
+        width: 25% !important;
+    }
+    .w-lg-30 {
+        width: 30% !important;
+    }
+    .w-lg-35 {
+        width: 35% !important;
+    }
+    .w-lg-40 {
+        width: 40% !important;
+    }
+    .w-lg-45 {
+        width: 45% !important;
+    }
+    .w-lg-50 {
+        width: 50% !important;
+    }
+    .w-lg-55 {
+        width: 55% !important;
+    }
+    .w-lg-60 {
+        width: 60% !important;
+    }
+    .w-lg-65 {
+        width: 65% !important;
+    }
+    .w-lg-70 {
+        width: 70% !important;
+    }
+    .w-lg-75 {
+        width: 75% !important;
+    }
+    .w-lg-80 {
+        width: 80% !important;
+    }
+    .w-lg-85 {
+        width: 85% !important;
+    }
+    .w-lg-90 {
+        width: 90% !important;
+    }
+    .w-lg-95 {
+        width: 95% !important;
+    }
+    .w-lg-100 {
+        width: 100% !important;
+    }
     .mt-lg-0, .my-lg-0 {
         margin-top: 0 !important;
     }
@@ -1569,6 +1869,66 @@ Padding
     }
 }
 @media (min-width: 1200px) {
+    .w-xl-5 {
+        width: 5% !important;
+    }
+    .w-xl-10 {
+        width: 10% !important;
+    }
+    .w-xl-15 {
+        width: 15% !important;
+    }
+    .w-xl-20 {
+        width: 20% !important;
+    }
+    .w-xl-25 {
+        width: 25% !important;
+    }
+    .w-xl-30 {
+        width: 30% !important;
+    }
+    .w-xl-35 {
+        width: 35% !important;
+    }
+    .w-xl-40 {
+        width: 40% !important;
+    }
+    .w-xl-45 {
+        width: 45% !important;
+    }
+    .w-xl-50 {
+        width: 50% !important;
+    }
+    .w-xl-55 {
+        width: 55% !important;
+    }
+    .w-xl-60 {
+        width: 60% !important;
+    }
+    .w-xl-65 {
+        width: 65% !important;
+    }
+    .w-xl-70 {
+        width: 70% !important;
+    }
+    .w-xl-75 {
+        width: 75% !important;
+    }
+    .w-xl-80 {
+        width: 80% !important;
+    }
+    .w-xl-85 {
+        width: 85% !important;
+    }
+    .w-xl-90 {
+        width: 90% !important;
+    }
+    .w-xl-95 {
+        width: 95% !important;
+    }
+    .w-xl-100 {
+        width: 100% !important;
+    }
     .mt-xl-0, .my-xl-0 {
         margin-top: 0 !important;
     }
@@ -1784,6 +2144,66 @@ Padding
     }
 }
 @media (min-width: 1400px) {
+    .w-xxl-5 {
+        width: 5% !important;
+    }
+    .w-xxl-10 {
+        width: 10% !important;
+    }
+    .w-xxl-15 {
+        width: 15% !important;
+    }
+    .w-xxl-20 {
+        width: 20% !important;
+    }
+    .w-xxl-25 {
+        width: 25% !important;
+    }
+    .w-xxl-30 {
+        width: 30% !important;
+    }
+    .w-xxl-35 {
+        width: 35% !important;
+    }
+    .w-xxl-40 {
+        width: 40% !important;
+    }
+    .w-xxl-45 {
+        width: 45% !important;
+    }
+    .w-xxl-50 {
+        width: 50% !important;
+    }
+    .w-xxl-55 {
+        width: 55% !important;
+    }
+    .w-xxl-60 {
+        width: 60% !important;
+    }
+    .w-xxl-65 {
+        width: 65% !important;
+    }
+    .w-xxl-70 {
+        width: 70% !important;
+    }
+    .w-xxl-75 {
+        width: 75% !important;
+    }
+    .w-xxl-80 {
+        width: 80% !important;
+    }
+    .w-xxl-85 {
+        width: 85% !important;
+    }
+    .w-xxl-90 {
+        width: 90% !important;
+    }
+    .w-xxl-95 {
+        width: 95% !important;
+    }
+    .w-xxl-100 {
+        width: 100% !important;
+    }
     .mt-xxl-0, .my-xxl-0 {
         margin-top: 0 !important;
     }
