--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -1,343 +1,82 @@
 @import url('../general-sans.css');
 @import url('../all-fonts.css');
-@import "reset.css?v=1";
-@import "classes.css?v=1";
-@import "wrapper.css?v=1";
-@import "colors.css?v=1";
-@import "images.css?v=1";
-@import "form.css?v=1";
-@import "components/cards.css?v=1";
-@import "typography.css?v=1";
-@import "displays.css?v=1";
-@import "button.css?v=1";
+
+@import "reset.css";
+@import "classes.css";
+@import "colors.css?v=2";
+@import "components/cards.css";
+@import "typography.css";
+@import "displays.css";
+@import "button.css";
 @import "grid.css?v=1";
-@import "navbar.css?v=1";
-@import "table.css?v=1";
-@import "media.css?v=1";
+@import "navbar.css";
+@import "table.css";
+@import "wrapper.css";
+@import "media.css";
 
 body {
     font-family: 'Roboto-Light';
-    background-color: #f1f1f1;
+    background-color: #f9f9f9ad;
 }
 
-.wallpaper {
-    top: 0px;
-    left: 0;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: relative;
-    background: url('../../img/studio-bg.jpg') no-repeat;
-    background-size: cover;
-    background-position: center;
-    -webkit-transform: rotateX(360deg);
-    transform: rotateX(360deg);
-    /*display: flex;
-    align-items: center;
-    justify-content: center;*/
-}
-
-.wallpaper::after {
-    content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    opacity: 0.9;
-    background: -webkit-gradient(linear, right top, left top, from(#000), to(rgba(0, 0, 0, 0.6)));
-    background: linear-gradient(to left, #000, rgba(0, 0, 0, 0.6));
-}
-
-.wallpaper>* {
-    z-index: 11111;
-}
-
-/*
-.card.card-shadow {
-    height: 420px;
-}*/
-
-.card.card-shadow {
-    width: 300px;
-}
-
-.card.card-shadow+.card.card-shadow {
-    margin-left: 1rem;
-}
-
-.back-to-top {
-    display: none;
-}
-
-.tinybar {
-    width: 100%;
-    height: 35px;
-    position: relative;
-    background-color: #343A40;
-}
-
-.tinybar .container-sm {
-    height: 100%;
-    overflow-x: auto;
-}
-
-.tinybar a {
+a {
     text-decoration: none;
-    color: #f0f0f0;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
 }
 
-.tinybar .tiny-item {
-    width: 120px;
-    min-width: 120px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-transition: background-color 0.15s ease-in-out;
-    transition: background-color 0.15s ease-in-out;
-}
-
-.tinybar .tiny-link small {
-    font-size: 14px;
-}
-
-.tinybar .tiny-item:hover {
-    background-color: #A80;
+a:hover {
+    text-decoration: none;
 }
 
 /*
-
- */
-
-.browse-items {}
-
-.browse-item {
-    min-height: 100px;
-    padding: 0;
-    border-radius: 2px;
-    background-color: #fff;
-    position: relative;
-    z-index: 11111;
-    border: solid 1px rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+navbar
+*/
+.navbar {
+    box-shadow: none;
+    border: solid 1px rgba(0, 0, 0, 0.03);
 }
 
-.browse-item::after {
-    content: '';
-    top: 100%;
-    left: 7%;
-    width: 85%;
-    height: 3%;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.15);
-    border-radius: 0 0 4px 4px;
-}
-
-.browse-item::before {
-    content: '';
-    top: 103%;
-    left: 15%;
-    width: 70%;
-    height: 5%;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.05);
-    border-radius: 0 0 4px 4px;
-}
-
-.browse-item .contain-img {
-    position: relative;
-}
-
-.browse-item,
-.browse-item .contain-img,
-.browse-item img {
-    border-radius: 4px 4px 0 0;
-}
-
-.browse-item .ratings,
-.browse-item .actions {
-    top: 45%;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    position: absolute;
-}
-
-.browse-item .contain-img::after {
-    content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    opacity: 0.4;
-    background-color: #000;
-}
-
-.browse-item .actions {
-    z-index: 1111;
-    gap: 0.5rem;
-}
-
-.browse-item .ratings {
-    width: 100%;
-    top: 75%;
-    z-index: 1111;
-    display: -webkit-box;
-    display: -ms-flexbox;
+.navbar .nav-app {
+    gap: 5px;
+    color: #f71;
+    font-size: 18px;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+    font-family: 'Roboto-Bold';
 }
 
-.browse-item .ratings small {
-    color: #fff;
-}
-
-.browse-item .ratings small+small {
-    margin-left: 0.2rem;
-}
-
-.browse-item .actions a {
-    width: 35px;
-    height: 35px;
-    aspect-ratio: 1/1;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    border: solid 1px rgba(255, 255, 255, 0.7);
-    background-color: #fff;
+.navbar a.__nav-link {
     color: #000;
-    border-radius: 2px;
-    -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out
+    font-size: 15px;
+    font-family: 'Roboto-Medium';
+    position: relative;
 }
 
-.browse-item .actions a:hover {
-    background-color: transparent;
-    color: #fff;
+.navbar a.__nav-link::after {
+    content: '';
+    bottom: 0;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    width: 0;
+    height: 2px;
+    background-color: #f71;
+    transition: 0.2s ease;
+    -webkit-transition: 0.2s ease;
+    -moz-transition: 0.2s ease;
+    -ms-transition: 0.2s ease;
+    -o-transition: 0.2s ease;
 }
 
-.browse-item .title.d-block {
-    margin-bottom: -7px;
+.navbar .__nav-item.active a.__nav-link::after,
+.navbar a.__nav-link:hover::after {
+    width: 100%;
 }
 
-.browse-item span,
-.browse-item small:not(small.bi) {
-    padding: 0 1rem;
-}
-
-.browse-item .info {
-    color: #fff;
-    background-color: #343A40;
-    border-radius: 0 0 4px 4px;
-}
-
-
-
-/*
-footer
- */
-
-.footer {
-    background-color: #343A40;
-}
-
-footer .heading {
-    font-size: 1.5rem;
-    color: #fff;
-    font-family: 'Roboto-Regular';
-    /*text-transform: uppercase;*/
-}
-
-footer {
-    color: rgba(255, 255, 255, 0.7);
-}
-
-footer .footer-heading,
-footer .subheading {
-    font-size: 1rem;
-    /*text-transform: uppercase;*/
-    color: rgba(255, 255, 255, 0.7);
-}
-
-footer .btn {
-    color: #fff;
-    background-color: #F9C700;
-}
-
-footer li,
-footer a {
-    color: #fff;
-}
-
-footer .logo {
-    font-size: 1.5rem;
-    color: #F9C700;
-    font-family: 'Roboto-Regular';
-}
-
-.auths .container-sm>[class*="col"],
-.auths .container-sm>[class*="row"] {
-    background: #fff;
-    border: solid 1px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 0.25rem;
-    -webkit-border-radius: 0.25rem;
-    -moz-border-radius: 0.25rem;
-    -ms-border-radius: 0.25rem;
-    -o-border-radius: 0.25rem;
-}
-
-.op-0 {
-    opacity: 0;
-}
-
-thead {
-    background-color: #ccc;
-}
-
-th,
-td {
-    padding: 6px 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.bold {
-    font-size: 20px;
-    line-height: 20px;
-    font-family: 'GeneralSans-Bold';
-}
-
-.in-use-item {
-    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+.navbar .__nav-item.active a.__nav-link,
+.navbar a.__nav-link:hover {
+    color: #f71;
 }
