--- a/public/assets/css/style/components/cards.css
+++ b/public/assets/css/style/components/cards.css
@@ -29,7 +29,7 @@
 .card-title, .card-leading-title {
     font-size: 1.2rem;
     line-height: 1.2rem;
-    font-family: 'Roboto-Bold';
+    font-family: 'GeneralSans-Bold';
     display: block;
 }
 .card-text, .card-leading-text {
