--- a/public/assets/css/style/colors.css
+++ b/public/assets/css/style/colors.css
@@ -1,7 +1,15 @@
 .bg-warning {
-	background-color: #F9C700 !important;
+    background-color: #F9C700 !important;
 }
 
 .bg-warning * {
-	color: #fff !important;
+    color: #fff !important;
+}
+
+.bg-orange {
+    background-color: #f71 !important;
+}
+
+.bg-orange * {
+    color: #fff !important;
 }
