--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -287,7 +287,8 @@ faqs
 }
 
 .faqItem-top {
-    height: 45px;
+    min-height: 45px;
+    padding-top: 0.2rem;
     background-color: #fff;
     border: solid 1px rgba(0, 0, 0, 0.1);
     border-left: 4px solid #f71;
