--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -311,11 +311,11 @@ faqs
     height: 0;
     background-color: #fff;
     overflow: hidden;
-    transition: padding 0.1s ease, height 0.2s ease, border 0.15s ease;
-    -webkit-transition: padding 0.1s ease, height 0.2s ease, border 0.15s ease;
-    -moz-transition: padding 0.1s ease, height 0.2s ease, border 0.15s ease;
-    -ms-transition: padding 0.1s ease, height 0.2s ease, border 0.15s ease;
-    -o-transition: padding 0.1s ease, height 0.2s ease, border 0.15s ease;
+    transition: padding 0s, height 0.2s ease, border 0.15s ease;
+    -webkit-transition: padding 0s, height 0.2s ease, border 0.15s ease;
+    -moz-transition: padding 0s, height 0.2s ease, border 0.15s ease;
+    -ms-transition: padding 0s, height 0.2s ease, border 0.15s ease;
+    -o-transition: padding 0s, height 0.2s ease, border 0.15s ease;
 }
 
 .faqItem-top.active+.faqItem-body {
@@ -437,4 +437,61 @@ footer*/
     align-items: center;
     z-index: 111;
     position: relative;
+}
+
+
+/*
+|---------------------------------------------------
+| loader
+|---------------------------------------------------
+*/
+.loader {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 11111111111111111;
+    background-color: #fff;
+    opacity: 0.99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.loader .spin {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    border: 6px solid;
+    border-color: #FF4611 rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25);
+    animation: rotate 2s ease infinite;
+}
+
+.loader.end-animation {
+    display: none;
+}
+
+.loader.end-animation .spin {
+    animation: none;
+}
+
+@keyframes rotate {
+
+    0%,
+    100% {
+        transform: rotate(360deg);
+    }
+
+    20% {
+        transform: rotate(0deg);
+    }
+}
+
+
+.title.text-bold {
+    font-size: 22px;
+    margin-top: -5px;
 }
