--- a/public/assets/css/style/form.css
+++ b/public/assets/css/style/form.css
@@ -69,9 +69,9 @@
 }
 
 .form-input:focus {
-  border-color: #eee;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.05);
-  box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.05);
+  border-color: #aaa;
+  /*-webkit-box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.05);*/
 }
 
 .input-warning:focus {
