--- a/public/assets/css/style/button.css
+++ b/public/assets/css/style/button.css
@@ -1,4 +1,4 @@
-.btn {
+/*.btn {
     outline: 0;
     border: solid 1px transparent;
     vertical-align: middle;
@@ -12,6 +12,40 @@
     transition: opacity 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out, color 0.2s ease-in-out;
     transition: opacity 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out, color 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
     cursor: pointer;
+}*/
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    border-radius: 0.15rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn:hover {
+    color: #212529;
+}
+
+.btn:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(13, 110, 233, 0.25);
+}
+
+.btn:disabled, .btn.disabled {
+    pointer-events: none;
+    opacity: 0.65;
 }
 
 .btn-block {
@@ -21,7 +55,6 @@
 
 .btn:hover {
     opacity: 0.89;
-    -webkit-box-shadow: 0px 0 1px 2.5px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 0 1px 2.5px rgba(0, 0, 0, 0.1);
 }
 
@@ -31,7 +64,6 @@
 }
 
 .btn-white:hover {
-    -webkit-box-shadow: 0px 0 1px 2.5px rgba(255, 255, 255, 0.5);
     box-shadow: 0px 0 1px 2.5px rgba(255, 255, 255, 0.5);
 }
 
@@ -41,19 +73,26 @@
 }
 
 .btn-primary:hover {
-    -webkit-box-shadow: 0px 0 1px 2.5px rgba(0, 123, 255, 0.5);
     box-shadow: 0px 0 1px 2.5px rgba(0, 123, 255, 0.5);
 }
 
 .btn-orange {
     color: #fff;
-    background-color: #f71;
+    background-color: #F71;
+    border-color: #F71;
+}
+
+.btn-orange:focus {
+    color: #fff;
+    background-color: #F71;
+    border-color: #F71;
+    box-shadow: 0 0 0 0.25rem rgba(253, 126, 20, 0.25);
 }
 
 .btn-orange:hover {
-    color: #f1f1f1;
-    -webkit-box-shadow: 0px 0 1px 2.5px rgba(253, 126, 20, 0.5);
-    box-shadow: 0px 0 1px 2.5px rgba(253, 126, 20, 0.5);
+    color: #fff;
+    background-color: #FF9375;
+    border-color: #FF9375;
 }
 
 /*
@@ -87,7 +126,6 @@ Outline btn
 .btn-outline-orange:hover {
     color: #f71;
     border-color: rgba(253, 126, 20, 0.5);
-    -webkit-box-shadow: 0px 0 1px 2.5px rgba(253, 126, 20, 0.5);
     box-shadow: 0px 0 1px 2.5px rgba(253, 126, 20, 0.5);
 }
 
